Performance tweaks with benchmarks + blobSidecarPool traces removed (#136)
* availabilityChecker kzg verification, good gain, altered with parallel stream
* miscHelper: construct extended matrix, good gain, altered with parallel stream
* blobSidecarPool traces removed
* add benchmark tests